@@ -3,6 +3,17 @@ Changelog for Poi
 
     (name of developer listed in brackets)
 
+Poi branch maurits-inline-response-adding
+-----------------------------------------
+
+- Add provider:poi.response.add that gives you a form for adding a
+  response when viewing an issue.
+  [maurits]
+
+- Add browser view @@create_response that creates a response in the
+  current issue, based on the request form.
+  [maurits]
+
 
 Poi 1.2 - (Unreleased)
 ----------------------
